# weft

./: .gitignore  .taplo.toml  Cargo.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: commit-msg
config/: weft.example.toml  weft.schema.json
crates/weft/: Cargo.toml
crates/weft/src/: compat.rs  config_loading.rs  context.rs  engine.rs  event_log.rs  grpc.rs  lib.rs  main.rs  server.rs  telemetry.rs  types.rs
crates/weft/src/hooks/: executor.rs  http_executor.rs  mod.rs  rhai_executor.rs  types.rs
crates/weft/src/telemetry/: metrics_layer.rs  propagation.rs
crates/weft/tests/: command_loop.rs  error_paths.rs  http_integration.rs  observability.rs  pipeline_integration.rs
crates/weft/tests/harness/: mod.rs
crates/weft_activities/: Cargo.toml
crates/weft_activities/src/: assemble_response.rs  command_formatting.rs  command_selection.rs  execute_command.rs  generate.rs  hooks.rs  lib.rs  model_selection.rs  provider_resolution.rs  sampling_adjustment.rs  selection_util.rs  system_prompt_assembly.rs  test_support.rs  validate.rs
crates/weft_classifier/: Cargo.toml
crates/weft_classifier/src/: bert.rs  lib.rs
crates/weft_commands/: Cargo.toml  build.rs
crates/weft_commands/proto/: tool_registry.proto
crates/weft_commands/src/: adapter.rs  grpc_client.rs  lib.rs  memory_client.rs  memory_mux.rs  parser.rs  test_support.rs  types.rs
crates/weft_commands_trait/: Cargo.toml
crates/weft_commands_trait/src/: lib.rs
crates/weft_core/: Cargo.toml
crates/weft_core/src/: command.rs  config.rs  config_store.rs  error.rs  lib.rs  message.rs  resolved_config.rs  routing.rs  toon.rs  wire.rs
crates/weft_engine/: Cargo.toml
crates/weft_engine/src/: activity.rs  context.rs  engine.rs  hooks.rs  lib.rs  memory.rs  provider.rs  request.rs  routing.rs  test_support.rs  util.rs
crates/weft_engine/src/engine/: activity.rs  memory.rs  mod.rs  provider.rs  request.rs  routing.rs  util.rs
crates/weft_engine/src/engine/tests/: hook_tests.rs  memory_tests.rs  mod.rs  provider_tests.rs  request_tests.rs  routing_tests.rs
crates/weft_eventlog_memory/: Cargo.toml
crates/weft_eventlog_memory/src/: lib.rs
crates/weft_eventlog_postgres/: Cargo.toml  schema.sql
crates/weft_eventlog_postgres/src/: lib.rs
crates/weft_hooks/: Cargo.toml
crates/weft_hooks/src/: executor.rs  http_executor.rs  lib.rs  rhai_executor.rs  types.rs
crates/weft_hooks_trait/: Cargo.toml
crates/weft_hooks_trait/src/: lib.rs
crates/weft_llm/: Cargo.toml
crates/weft_llm/src/: lib.rs  provider.rs  provider_service.rs  registry.rs  rhai_provider.rs  test_support.rs
crates/weft_llm/src/anthropic/: client.rs  mod.rs  wire.rs
crates/weft_llm/src/openai/: client.rs  mod.rs  wire.rs
crates/weft_llm_trait/: Cargo.toml
crates/weft_llm_trait/src/: lib.rs
crates/weft_memory/: Cargo.toml  build.rs
crates/weft_memory/proto/: memory_store.proto
crates/weft_memory/src/: client.rs  default_service.rs  lib.rs  mux.rs  null_service.rs  service.rs  types.rs
crates/weft_memory_trait/: Cargo.toml
crates/weft_memory_trait/src/: lib.rs
crates/weft_proto/: Cargo.toml  build.rs
crates/weft_proto/proto/: weft.proto
crates/weft_proto/src/: lib.rs
crates/weft_provider_trait/: Cargo.toml
crates/weft_provider_trait/src/: lib.rs
crates/weft_providers/: Cargo.toml
crates/weft_providers/src/: http.rs  lib.rs  provider.rs  provider_service.rs  rhai_provider.rs  test_support.rs  translate.rs
crates/weft_providers/src/anthropic/: client.rs  mod.rs  translate.rs  wire.rs
crates/weft_providers/src/openai/: client.rs  mod.rs  translate.rs  wire.rs
crates/weft_reactor/: Cargo.toml
crates/weft_reactor/src/: activity.rs  budget.rs  config.rs  error.rs  event.rs  event_log.rs  execution.rs  lib.rs  reactor.rs  reactor_tests.rs  registry.rs  services.rs  signal.rs  test_support.rs
crates/weft_reactor/src/activities/: assemble_prompt.rs  assemble_response.rs  command_formatting.rs  command_selection.rs  execute_command.rs  generate.rs  hooks.rs  mod.rs  model_selection.rs  provider_resolution.rs  route.rs  sampling_adjustment.rs  selection_util.rs  system_prompt_assembly.rs  validate.rs
crates/weft_reactor/src/reactor/: commands.rs  compile.rs  dispatch.rs  drain.rs  execute.rs  generate.rs  helpers.rs  mod.rs  pre_post.rs  retry.rs  test_hooks.rs  types.rs
crates/weft_reactor/tests/: reactor_children.rs  reactor_commands.rs  reactor_construction.rs  reactor_degradation.rs  reactor_dispatch.rs  reactor_hooks.rs  reactor_lifecycle.rs  reactor_preloop.rs  reactor_retry.rs
crates/weft_reactor/tests/harness/: behaviors.rs  builders.rs  events.rs  mod.rs
crates/weft_reactor_trait/: Cargo.toml
crates/weft_reactor_trait/src/: activity.rs  budget.rs  event.rs  event_log.rs  execution.rs  lib.rs  service.rs  signal.rs
crates/weft_rhai/: Cargo.toml
crates/weft_rhai/src/: convert.rs  engine.rs  error.rs  exec.rs  lib.rs  script.rs
crates/weft_router/: Cargo.toml
crates/weft_router/src/: bert.rs  domain.rs  lib.rs  routing_service.rs  test_support.rs  tokenizer.rs
crates/weft_router_trait/: Cargo.toml
crates/weft_router_trait/src/: lib.rs
crates/weft_tools/: Cargo.toml
crates/weft_tools/src/: client.rs  lib.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build.rs  ci.rs  completions.rs  grpc.rs  lint.rs  main.rs  run.rs  schema.rs  setup.rs  test.rs  util.rs  workspace.rs
providers/: example.rhai
