[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }

# HTTP
axum = { version = "0.8" }
reqwest = { version = "0.12", features = ["json"] }

# gRPC
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }
prost = { version = "0.13" }

# Internal
weft_proto = { path = "crates/weft_proto" }
weft_memory = { path = "crates/weft_memory" }
weft_tools = { path = "crates/weft_tools" }
weft_reactor = { path = "crates/weft_reactor" }
weft_eventlog_memory = { path = "crates/weft_eventlog_memory" }
weft_eventlog_postgres = { path = "crates/weft_eventlog_postgres" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }

# ML
ort = { version = "2.0.0-rc.12" }
tokenizers = { version = "0.21" }

# Error handling
thiserror = { version = "2" }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }
opentelemetry = { version = "0.29" }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.30" }
mockito = { version = "1" }
regex = { version = "1" }
rhai = { version = "1", features = ["sync", "serde"] }

# Testing
rstest = { version = "0.24" }
pretty_assertions = { version = "1" }

# xtask dev tool
xshell = { version = "0.2" }
