[package]
name = "weft_commands"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
weft_core = { path = "../weft_core" }
weft_commands_trait = { path = "../weft_commands_trait" }
weft_memory = { path = "../weft_memory" }
weft_tools = { path = "../weft_tools" }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
