[package]
name = "weft_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1"
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
weft_proto = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
schema = ["schemars"]
