[package]
name = "weft_eventlog_postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weft_reactor = { path = "../weft_reactor" }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
uuid = { workspace = true }
