[package]
name = "weft_hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
weft_core = { path = "../weft_core" }
weft_hooks_trait = { path = "../weft_hooks_trait" }
weft_rhai = { path = "../weft_rhai" }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rhai = { workspace = true }

[dev-dependencies]
tempfile = { version = "3" }
mockito = { workspace = true }
tokio = { workspace = true }
