[package]
name = "weft_llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weft_core = { path = "../weft_core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = { version = "1" }
tokio = { workspace = true }
serde_json = { workspace = true }
