[package]
name = "weft_llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
weft_core = { path = "../weft_core" }
weft_llm_trait = { path = "../weft_llm_trait" }
weft_rhai = { path = "../weft_rhai" }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

[dev-dependencies]
mockito = { version = "1" }
tempfile = { version = "3" }
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
rstest.workspace = true
pretty_assertions.workspace = true
