[package]
name = "weft_reactor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace
weft_core = { path = "../weft_core" }
weft_hooks = { path = "../weft_hooks" }
weft_hooks_trait = { path = "../weft_hooks_trait" }
weft_llm = { path = "../weft_llm" }
weft_llm_trait = { path = "../weft_llm_trait" }
weft_commands = { path = "../weft_commands" }
weft_commands_trait = { path = "../weft_commands_trait" }
weft_router = { path = "../weft_router" }
weft_router_trait = { path = "../weft_router_trait" }
weft_memory = { path = "../weft_memory" }
weft_memory_trait = { path = "../weft_memory_trait" }
weft_reactor_trait = { path = "../weft_reactor_trait" }

# Async
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[features]
# Expose test stubs and helpers for use in integration tests and dependent crates.
test-support = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
weft_activities = { path = "../weft_activities" }
weft_eventlog_memory = { path = "../weft_eventlog_memory" }
weft_llm = { path = "../weft_llm", features = ["test-support"] }
weft_router = { path = "../weft_router", features = ["test-support"] }
weft_commands = { path = "../weft_commands", features = ["test-support"] }
weft_reactor = { path = ".", features = ["test-support"] }
rstest.workspace = true
pretty_assertions.workspace = true
