[package]
name = "weft_router"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
weft_core = { path = "../weft_core" }
weft_router_trait = { path = "../weft_router_trait" }
async-trait = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ndarray = "0.17"
