[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

# Prevents Cargo from walking up to the parent workspace when building xtask
# directly. Required because xtask is in `workspace.exclude`.
[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
