[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

# Prevents Cargo from walking up to the parent workspace when building xtask
# directly. Required because xtask is in `workspace.exclude`.
[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
schemars = { version = "0.8" }
serde_json = { version = "1" }
weft_core = { path = "../weft_core", features = ["schema"] }
xshell = "0.2"
